Migrate some cursor utils to core-util.